--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,10 +89,6 @@ AddSources("${LIBINCLUDE_DIR}" "Lib" lib_include_files)
 AddSources("${BINSOURCE_DIR}" "App" bin_source_files)
 AddSources("${BININCLUDE_DIR}" "App" bin_include_files)
 
-if(BUILD_TESTS) # Tests helpers class
-    AddSources("${TEST_DIR}/helpers" "Test" test_helper_files)
-endif()
-
 # configure files
 # ******************************************************************************
 configure_file(${BININCLUDE_DIR}/meta.h.in meta.h)
@@ -104,7 +100,6 @@ add_library(
 # source files
   ${lib_source_files}
   ${lib_include_files}
-  ${test_helper_files}
 )
 
 # Only if we build the app
@@ -154,6 +149,10 @@ AddSources("${TEST_DIR}" "Test" TEST_FILES)
 # Add test target
 # --- enable unit tests if desired ---
 if(BUILD_TESTS)
+  AddSources("${TEST_DIR}/helpers" "Test" test_helper_files)
+  AddSources("${TEST_DIR}/testFiles" "Test" test_tfiles_files)
+
+  set(TEST_FILES ${TEST_FILES} ${test_helper_files} ${test_tfiles_files})
   GENERATE_TEST_TARGET(COVERAGE ${BUILD_TESTS_COVERAGE} VALGRIND ${VALGRIND_CHECK}
                        TARGET_NAME ${BIN_TEST} FILES ${TEST_FILES} LIB_TARGET ${LIB_NAME})
 endif()
