Cpack generator good

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.0.2)
 
-project(Yellow)
+set(PROJECT_NAME "Yellow")
+project(${PROJECT_NAME})
 
 set(BIN_NAME "yellow")
 set(LIB_NAME "wire")
@@ -197,5 +198,17 @@ INSTALL(TARGETS ${BIN_NAME}
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib/static)
 
+
 SET(CPACK_GENERATOR "DEB")
-SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Remi Robert") #required
+SET(CPACK_PACKAGE_MAINTAINER "Remi Robert")
+SET(CPACK_PACKAGE_CONTACT "noreply@example.com")
+SET(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
+SET(CPACK_PACKAGE_VERSION_MAJOR "${TEMPLATE_VERSION_MAJOR}")
+SET(CPACK_PACKAGE_VERSION_MINOR "${TEMPLATE_VERSION_MINOR}")
+SET(CPACK_PACKAGE_VERSION_PATCH "${TEMPLATE_VERSION_PATCH}")
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Sniff Sniff")
+SET(CPACK_DEBIAN_PACKAGE_SECTION "stable")
+SET(CPACK_PACKAGE_DEBIAN_ARCH "amd64")
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libQt5Core (>= 5.0)")
+
+INCLUDE(CPack)
