Install only if app is built

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,24 +198,27 @@ if(GENERATE_DOC)
 endif()
 
 
-# Deb package generation
-INSTALL(TARGETS ${BIN_NAME}
-        RUNTIME DESTINATION "bin"
-        LIBRARY DESTINATION lib
-        ARCHIVE DESTINATION lib/static)
-INSTALL(DIRECTORY ${BINRESSOURCESOURCE_DIR} DESTINATION "/usr/share/yellow/")
+if (BUILD_APP)
+    # Deb package generation
+    INSTALL(TARGETS ${BIN_NAME}
+            RUNTIME DESTINATION "bin"
+            LIBRARY DESTINATION lib
+            ARCHIVE DESTINATION lib/static)
+    INSTALL(DIRECTORY ${BINRESSOURCESOURCE_DIR} DESTINATION "/usr/share/yellow/")
 
 
-SET(CPACK_GENERATOR "DEB")
-SET(CPACK_PACKAGE_MAINTAINER "Yellow's project menbers")
-SET(CPACK_PACKAGE_CONTACT "noreply@example.com")
-SET(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
-SET(CPACK_PACKAGE_VERSION_MAJOR "${TEMPLATE_VERSION_MAJOR}")
-SET(CPACK_PACKAGE_VERSION_MINOR "${TEMPLATE_VERSION_MINOR}")
-SET(CPACK_PACKAGE_VERSION_PATCH "${TEMPLATE_VERSION_PATCH}")
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Sniff Sniff")
-SET(CPACK_DEBIAN_PACKAGE_SECTION "stable")
-SET(CPACK_PACKAGE_DEBIAN_ARCH "amd64")
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5gui5 (>= 5.6)")
+    SET(CPACK_GENERATOR "DEB")
+    SET(CPACK_PACKAGE_MAINTAINER "Yellow's project menbers")
+    SET(CPACK_PACKAGE_CONTACT "noreply@example.com")
+    SET(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
+    SET(CPACK_PACKAGE_VERSION_MAJOR "${TEMPLATE_VERSION_MAJOR}")
+    SET(CPACK_PACKAGE_VERSION_MINOR "${TEMPLATE_VERSION_MINOR}")
+    SET(CPACK_PACKAGE_VERSION_PATCH "${TEMPLATE_VERSION_PATCH}")
+    SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Sniff Sniff")
+    SET(CPACK_DEBIAN_PACKAGE_SECTION "stable")
+    SET(CPACK_PACKAGE_DEBIAN_ARCH "amd64")
+    SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5gui5 (>= 5.6)")
 
-INCLUDE(CPack)
+    INCLUDE(CPack)
+endif()
+
